# opendeck-akp05

./: .gitignore  40-opendeck-akp03.rules  40-opendeck-akp05.rules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.macos-cross  README.md  cliff.toml  justfile  manifest.json
scripts/: package-win.ps1
src/: device.rs  dispatcher.rs  inputs.rs  main.rs  mappings.rs  watcher.rs
